--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,29 @@
-<app-default-login-layout></app-default-login-layout>
+<app-default-login-layout
+    title="Faça o login na sua conta"
+    primaryBtnText="Logar"
+    secondaryBtnText="Inscrever-se"
+    (submit)="submit()"
+    (navigate)="navigate()"
+    [disablePrimaryBtn]="!loginForm.valid"
+    >
+    <form [formGroup]="loginForm">
+        <app-primary-input
+            formControlName="email"
+            inputName="email"
+            type="email"
+            label="Email"
+            placeholder="nome@gmail.com"
+            >
+            <img src="/assets/svg/email-icon.svg"/>
+        </app-primary-input>
+        <app-primary-input
+            formControlName="password"
+            inputName="password"
+            type="password"
+            label="Senha"
+            >
+            <img src="/assets/svg/password-icon.svg"/>
+        </app-primary-input>
+        <span>Esqueceu a senha?</span>
+    </form>
+</app-default-login-layout>
